--- a/frontend/src/components/Loaders/circle1.css
+++ b/frontend/src/components/Loaders/circle1.css
@@ -1,15 +1,15 @@
 .loader2 {
   display: flex;
-  gap: 12px;
+  gap: 5px;
   justify-content: center;
   align-items: center;
 }
 
 .loader2 div {
-  width: 30px;
-  height: 30px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
-  background: blue;
+  background: white;
   animation: bounce 0.6s infinite alternate;
 }
 
