--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -111,7 +111,6 @@
   height: 50px;
   border-radius: 50%;
   object-fit: cover;
-  border: 2px solid #3498db;
   transition: transform 0.2s ease;
 }
 .profile-pic:hover {
@@ -119,6 +118,9 @@
 }
 .profile-link {
   line-height: 0;
+  border:2px solid #3498db;
+  border-radius: 50%;
+  padding:0.1rem;
 }
 
 /* =========================================== */
