--- a/frontend/src/css/patientprofile.css
+++ b/frontend/src/css/patientprofile.css
@@ -13,8 +13,9 @@
 
 .profile-sidebar {
   flex-basis: 25%;
-  background-color: #34c9e3;
-  color: #ffffff;
+  background-color:rgb(246, 249, 251);
+  color: black;
+  border-right:2px solid #00008b;
   padding: 40px;
   display: flex;
   flex-direction: column;
@@ -64,15 +65,14 @@
 }
 
 .profile-sidebar-title {
-  font-size: 25px;
-  font-weight: 800;
+  font-size: 22px;
+  font-weight: 700;
   color: #00008b;
   margin-bottom: 10px;
 }
 
 .profile-sidebar-desc {
   font-size: 14px;
-  color: white;
   margin-bottom: 50px;
   max-width: 250px;
 }
@@ -86,7 +86,6 @@
 }
 
 .profile-sidebar-nav a,.logout {
-  color: white;
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -97,8 +96,12 @@
   transition: background-color 0.2s;
 }
 
+
+
+
 .profile-sidebar-nav a:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #007aff;
+  color:white;
 }
 
 .profile-sidebar-nav a svg {
@@ -280,7 +283,6 @@
   gap: 8px; /* space between icon and text */
   padding: 8px 16px;
   background-color:transparent; /* red logout button */
-  color: white;
   border: none;
   border-radius: 6px;
   cursor: pointer;
@@ -292,6 +294,7 @@
 .logout:hover {
   background-color: #d32f2f; /* darker red on hover */
   transform: scale(1.03);
+  color:white;
 }
 
 .logout svg.size-6 {
@@ -366,7 +369,7 @@
   border: 1px solid #dcdcdc;
   border-radius: 8px;
 
-
+}
 /* Tablet screens (≤1024px) */
 @media (max-width: 1024px) {
   .profile-main-container {
